# minion

./: README.md  minion.cabal  stack.yaml  test.min.dhall
app/: Main.hs
src/: Env.hs  IntermediateEnv.hs  Log.hs  Module.hs  PrivEsc.hs  Task.hs
src/Config/: Main.hs
src/Module/: Copy.hs  Exec.hs  File.hs  Shell.hs
