name:                minion
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nickhs/minion#readme
license:             BSD3
license-file:        LICENSE
author:              Nick HS
maintainer:          nick@nickhs.com
copyright:           2017 Nick Hanley
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Module,
    Module.File,
    Module.Copy
  build-depends:       base >= 4.7 && < 5,
                       text,
                       dhall,
                       mtl,
                       shelly
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings,
    DeriveGeneric,
    RankNTypes,
    FlexibleContexts

executable minion-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , minion
                     , text
                     , dhall
                     , shelly
                     , mtl
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings,
    DeriveGeneric,
    RankNTypes,
    FlexibleContexts

test-suite minion-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , minion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nickhs/minion
